@@ -1,3 +1,6 @@
-MD5 2529ba99bdd690c2eb2797b29d37608c ChangeLog 218
-MD5 7e549056132fdc1ce424940b2899b890 vdrplugin-dxr3-0.2.1.ebuild 1366
+MD5 89b3561f038c7496ad2fd819e87b8d3a ChangeLog 239
+MD5 d63d7abe861ce234f66ebcf3f9e6c39e vdrplugin-dxr3-0.2.1.ebuild 1379
+MD5 30de2e3b40b74ff440c11901701a3245 vdrplugin-dxr3-0.2.1-r1.ebuild 1543
+MD5 550fc715bdbd965a39de091bb1fe5130 files/dxr3_elchi.diff 518
 MD5 2c6c3d65a5b98c96e92e793482401b75 files/digest-vdrplugin-dxr3-0.2.1 62
+MD5 2c6c3d65a5b98c96e92e793482401b75 files/digest-vdrplugin-dxr3-0.2.1-r1 62
