@@ -1,5 +1,8 @@
 # ChangeLog for media-video/vdrplugin-dxr3
 # Copyright 2003 Phillip Rothe <phil@alpha-centauri.org>; Distributed under the GPL
+*vdrplugin-dxr3-0.2.1 (10 Dec 2003)
+  10 Dec 2003; F. Schilhabel <fernsehleo@gmx.net>
+  added patch to fix compilation with an Elchi enhanced VDR
 
 *vdrplugin-dxr3-0.2.1 (28 Aug 2003)
 
